Misma altura class well

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -191,7 +191,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row">
+                                    <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-3">
                                             <div class="well">
                                                 <h4>Mathematical Ecology and Epidemiology</h4>
@@ -228,7 +228,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>17:30-19:30</strong></div>
                                 <div class="panel-body">
-                                    <div class="row">
+                                    <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
                                                 <h4>Special Functions, Orthogonal Polynomials and Applications</h4>
@@ -455,7 +455,7 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>17:30-19:30</strong></div>
                                 <div class="panel-body">
-                                    <div class="row">
+                                    <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
                                                 <h4>Discrete Math</h4>
