--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -168,7 +168,7 @@
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-3">
                                             <div class="well">
-                                                <h4>Matroid Theory</h4>
+                                                <h4><a href="{{ app.request.basepath }}/sessions/matroid-theory">Matroid Theory</a></h4>
                                                 Room 1
                                             </div>
                                         </div>
@@ -556,141 +556,140 @@
                 <div role="tabpanel" class="tab-pane" id="social"></div>
                 <div role="tabpanel" class="tab-pane table-responsive" id="special">
 
-                    <div class="special-session-a" ><strong>Matroid Theory</strong><br>
+                    <div class="special-session-a" ><strong><a href="{{ app.request.basepath }}/sessions/matroid-theory">Matroid Theory</a></strong><br>
                         <small>Criel Merino (IM-Oax) Carolyn Chun (LSU) Dillon Mayhew (U. Wellington-Victoria)</small> <br>
-                        <small>merinomatem.unam.mx</small><br>
+                        <small>merino<i class="fa fa-at" aria-hidden="true"></i>matem.unam.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Bergman Spaces and Toeplitz operators</strong><br>
                         <small>Salvador Perez Esteva (IM-Cuer) Kehe Zhu (St. Univ New York Albay)</small> <br>
-                        <small>spesteva@im.unam.mx</small><br>
+                        <small>spesteva<i class="fa fa-at" aria-hidden="true"></i>im.unam.mx</small><br>
                     </div>
                     </br>
                     <div class="special-session-a" ><strong>Dynamical Systems and Geometry</strong><br>
                         <small>Carlos Cabrera-Aubin Arroyo (IM-Cuer), Tomoki Kawahira (Tokyo I. Of Technology), Federico Rodriuez (Penn State), Andres Navas (U. De santiago)</small> <br>
-                        <small>aubinarroyo@im.unam.mx</small><br>
+                        <small>aubinarroyo<i class="fa fa-at" aria-hidden="true"></i>im.unam.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Differential Geometry</strong><br>
                         <small>Kazuo Akutagawa Tokyo I. of Tech.), Akito Futaki (U. of Tokyo), Jimy Petean (CIMAT)</small> <br>
-                        <small>jimmy@cimat.mx</small><br>
+                        <small>jimmy<i class="fa fa-at" aria-hidden="true"></i>cimat.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-a" ><strong>Current Trends in Symplectic Geometry and Topology</strong><br>
                         <small>Cheol-Hyun Cho (Seoul National. Univ.), Eduardo Gonzalez (UMASS, Boston), Haoru Ono (RImS, Kyoto), Andres Pedroza (Colima), Yasha Savelyev (Colima)</small> <br>
-                        <small>andres_pedroza@ucol.mx</small><br>
+                        <small>andres_pedroza<i class="fa fa-at" aria-hidden="true"></i>ucol.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Symmetric Structures in Discrete Geometry</strong><br>
                         <small>Asia Ivic Weiss ( York Univ.), Daniel Pellicer (CCM), Egon Schulte (NE University, Boston)</small> <br>
-                        <small>pellicer@matmor.unam.mx</small><br>
+                        <small>pellicer<i class="fa fa-at" aria-hidden="true"></i>matmor.unam.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-a"><strong>Algebraic and Enumerative Combinatorics</strong><br>
                         <small>Ernesto Vallejo (CCM) Marcelo Aguiar (Cornell) Nantel Bergeron (York, Canada)</small> <br>
-                        <small>ernevallejo@gmail.com</small><br>
+                        <small>ernevallejo<i class="fa fa-at" aria-hidden="true"></i>gmail.com</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Discrete Math</strong><br>
                         <small>Natalia García Colín  (Infotec), Luis Goddyn (Simon Fraser Univ.),  Amanda Montejano (UNAM)</small> <br>
-                        <small>garciacolin.natalia@googlemail.com</small><br>
+                        <small>garciacolin.natalia<i class="fa fa-at" aria-hidden="true"></i>googlemail.com</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-a"><strong>Mathematical Ecology and Epidemiology</strong><br>
                         <small>Jorge Velasco (IM-Juriquilla) Michael Li (U. Alberta) Hisahi Inaba (U. Tokyo) Ying-Hen (China Med. University)</small> <br>
-                        <small>jx.velasco@im.unam.mx</small><br>
+                        <small>jx.velasco<i class="fa fa-at" aria-hidden="true"></i>im.unam.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Advances in Geometric Methods in Mechanics with Applications</strong><br>
                         <small>Luis García Naranjo (UNAM), Vakhtang Putkaradza (Alberta), Dmitry Zenkov (NCSU)</small> <br>
-                        <small>putkarad@ualberta.ca</small><br>
+                        <small>putkarad<i class="fa fa-at" aria-hidden="true"></i>ualberta.ca</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-a"><strong>Nonlinear Elliptic PDE and Systems</strong><br>
                         <small>Nils Ackerman (IM) Du Yihong (Australia) Musso Monica (Chile) Tanaka Kazunaga (Japan)</small> <br>
-                        <small>nils@ackermath.info</small><br>
+                        <small>nils<i class="fa fa-at" aria-hidden="true"></i>ackermath.info</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Matrix Analysis and its Applications</strong><br>
                         <small>Qing-Wen Wamng (Shangai Univ.), Fuhzen  Zhang (Miami), Yang Zhang (Mantoba)</small> <br>
-                        <small>zhang@nova.edu</small><br>
+                        <small>zhang<i class="fa fa-at" aria-hidden="true"></i>nova.edu</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-a"><strong>Instability of natural convection in cylindrical containers</strong><br>
                         <small>Eduardo Ramos (IER, UNAM)</small> <br>
-                        <small>erm@ier.unam.mx</small><br>
+                        <small>erm<i class="fa fa-at" aria-hidden="true"></i>ier.unam.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Algebraic Geometry</strong><br>
                         <small>Pedro Luis del Angel (CIMAT), Keinichiro Kimura (Tsukuba)</small> <br>
-                        <small>luis@cimat.mx</small><br>
+                        <small>luis<i class="fa fa-at" aria-hidden="true"></i>cimat.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-a"><strong>Groups and orbifolds in geometry and topology</strong><br>
                         <small>Ernesto Lupercio (CINVESTAV) Alejandro Adem (UBC) Jianzhang Pan (Academia Sinica, China)</small> <br>
-                        <small>lupercio@math.cinvestav.mx</small><br>
+                        <small>lupercio<i class="fa fa-at" aria-hidden="true"></i>math.cinvestav.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Special Functions, Orthogonal Polynomials and Applications</strong><br>
                         <small>Manuel Dominguez (IM, UNAM), Luis E. Garza Gaona (Colima)</small> <br>
-                        <small>mdi29@im.unam.mx</small><br>
+                        <small>mdi29<i class="fa fa-at" aria-hidden="true"></i>im.unam.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-a"><strong>Singularities of Spaces and Mappings</strong><br>
                         <small>Jawad Snousi-Jose Seade (IM-Cuer) David Massey (USA) Masaharu Ishikawa (Japan) Nguyen Viet Dung (Vietnam)</small> <br>
-                        <small>jsnoussi@im.unam.mx</small><br>
+                        <small>jsnoussi<i class="fa fa-at" aria-hidden="true"></i>im.unam.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Poisson Geometry and Its Applications</strong><br>
                         <small>Misael Avendaño (UNISON), Matias del Hoyo (IMPA), Rui Loja Fernandes (U. Illinois-Urbana), Yuri Vorobiev (U. de Sonora)</small> <br>
-                        <small>misaelave@mat.uson.mx</small><br>
+                        <small>misaelave<i class="fa fa-at" aria-hidden="true"></i>mat.uson.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-a"><strong>Geometry and Topology</strong><br>
-                        <small>Daniel Juan  (CCM)   Chris Connell (Indiana)       Fuquan Fang (Capital Normal Univ. China)</small> <br>
-                        <small>daniel@matmor.unam.mx</small><br>
+                        <small>Daniel Juan (CCM), Chris Connell (Indiana), Fuquan Fang (Capital Normal Univ. China)</small> <br>
+                        <small>daniel<i class="fa fa-at" aria-hidden="true"></i>matmor.unam.mx</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Inverse problems and PDE Control Theory</strong><br>
                         <small> Luz de Teresa (IM-UNAM), Héctor Morales Bárcenas (UAM-Mexico),  Abdon Choque (IFM)</small> <br>
-                        <small>abdon.ifm@gmail.com</small><br>
+                        <small>abdon.ifm<i class="fa fa-at" aria-hidden="true"></i>gmail.com</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-a"><strong>Commutative Algebra: Homological and Combinatorial Methods</strong><br>
                         <small>Louiza Fouli (New Mexico State Univ.), Luis Nuñez Betancourt (CIMA), Rafael Heraclio Villareal (Cinvestav), Yuji Yoshino (Okayama Univ.)</small> <br>
-                        <small>rhvillarreal@gmail.com</small><br>
+                        <small>rhvillarreal<i class="fa fa-at" aria-hidden="true"></i>gmail.com</small><br>
                     </div>
                     </br>
 
                     <div class="special-session-b"><strong>Stochastic Processes and Applications</strong><br>
                         <small>Victor Rivero (CIMAT) Joaquin Fontbona (DIM Chile) Kouji Yano (Kyoto)</small> <br>
-                        <small>jcpardo@cimat.mx</small><br>
+                        <small>jcpardo<i class="fa fa-at" aria-hidden="true"></i>cimat.mx</small><br>
                     </div>
                     </br>
 
                 </div>
             </div>
         </div>
-
     </div>
 
 {% endblock %}
