--- a/web/css/ccm.css
+++ b/web/css/ccm.css
@@ -295,6 +295,16 @@ h4{
 
 }
 
+.program-session-1 {
+    padding: 10px;
+    background-color: #E0D6EA;
+}
+
+.program-session-2 {
+    padding: 10px;
+    background-color: #D3C1E0;
+}
+
 .row-flex, .row-flex > div[class*='col-'] {
     display: -webkit-box;
     display: -moz-box;
@@ -378,6 +388,15 @@ h4{
 
 .carousel-caption .h1 .small, .h1 small, .h2 .small, .h2 small, .h3 .small, .h3 small, .h4 .small, .h4 small, .h5 .small, .h5 small, .h6 .small, .h6 small, h1 .small, h1 small, h2 .small, h2 small, h3 .small, h3 small, h4 .small, h4 small, h5 .small, h5 small, h6 .small, h6 small {
     color: #fff;
+}
+
+.session-title {
+    color: #3ab34a;
+}
+
+.organizers {
+    color: #333;
+    font-size: 14px;
 }
 
 /*breakpoin navbar */
