- Paginas web plenary speakers

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -112,7 +112,7 @@
         <div align="center">
             <div><h4>Maria ChudnovskyS <br><small>Columbia University</small></h4></div>
             <div><h4>Kenji Fukaya <br><small>Simons Center, Stony Brook</small></h4></div>
-            <div><h4>Peter arnak <br><small>Princeton</small></h4></div>
+            <div><h4>Peter Sarnak <br><small>Princeton</small></h4></div>
             <div><h4>Jongil Park <br><small>Seoul National University</small></h4></div>
             <div><h4>Kyoji Saito <br><small>Kavli-IPMU, Tokyo</small></h4></div>
             <div><h4>Patricio Felmer <br><small>CMM, Universidad de Chile</small></h4></div>
