--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -557,8 +557,11 @@
                 <div role="tabpanel" class="tab-pane table-responsive" id="special">
 
                     <div class="special-session-a" ><strong><a href="{{ app.request.basepath }}/sessions/matroid-theory">Matroid Theory</a></strong><br>
-                        <small>Criel Merino (IM-Oax) Carolyn Chun (LSU) Dillon Mayhew (U. Wellington-Victoria)</small> <br>
-                        <small>merino<i class="fa fa-at" aria-hidden="true"></i>matem.unam.mx</small><br>
+                        <small>
+                        Carolyn Chun, US Naval Academy, 121 Blake Rd, Annapolis, MD 21402, United States. E-mail: chchchun<i class="fa fa-at" aria-hidden="true"></i>gmail.com.<br>
+                        Criel Merino, UNAM, León 2, altos, centro 68000, Oaxaca, Oax., México. Email: merino<i class="fa fa-at" aria-hidden="true"></i>matem.unam.mx, main contact organizer.<br>
+                        Peter Nelson, Department of Combinatorics and Optimization, University of Waterloo, Waterloo, ON N2L3G1, Canada. E-mail: apnelson<i class="fa fa-at" aria-hidden="true"></i>uwaterloo.ca
+                        </small>
                     </div>
                     </br>
 
