--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -14,7 +14,7 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Ana Amador</h4>
+                        <h4 class="media-heading"><a href="http://users.df.uba.ar/anita/amador/Ana_Amador/Welcome.html">Ana Amador</a></h4>
                         <p>Universidad de Buenos Aires, Argentina</p>
                         <p><small><em>Applied dynamical systems/bird songs</em></small></p>
                          <p>
@@ -31,7 +31,7 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Alexey Bondal</h4>
+                        <h4 class="media-heading"><a href="http://db.ipmu.jp/member/personal/170en.html">Alexey Bondal</a></h4>
                         <p>Kavli IPMU (Tokyo) & Steklov Institute</p>
                         <p><small><em>Geometry & physics</em></small></p>
                         <p>
@@ -50,7 +50,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Chenyang Xu <small>Peking University</small></h4>
+                        <h4 class="media-heading"><a href="http://www.bicmr.org/~chenyangxu">Chenyang Xu </a></h4>
+                        <p>Peking University</p>
                         <p><small><em>Algebraic geometry</em></small></p>
                         <p>
                         </p>
@@ -65,7 +66,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">David Brydges <small>UCLA</small></h4>
+                        <h4 class="media-heading"><a href="http://www.math.ubc.ca/~db5d/">David Brydges</a></h4>
+                        <p>UCLA</p>
                         <p><small><em>Number theory</em></small></p>
                         <p>
                         </p>
@@ -83,7 +85,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Duke <small>UCLA</small></h4>
+                        <h4 class="media-heading"><a href="http://www.math.ucla.edu/~wdduke/">William Duke</a></h4>
+                        <p>UCLA</p>
                         <p><small><em>Number theory</em></small></p>
                         <p>
                         </p>
@@ -116,7 +119,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Geoff Whittle <small>Victoria University, New Zealand</small></h4>
+                        <h4 class="media-heading"><a href="http://www.victoria.ac.nz/sms/about/staff/geoff-whittle">Geoff Whittle</a></h4>
+                        <p>Victoria University, New Zealand</p>
                         <p><small><em>Matroid theory</em></small></p>
                         <p>
                         </p>
@@ -131,7 +135,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Hee Oh <small>Yale</small></h4>
+                        <h4 class="media-heading"><a href="http://gauss.math.yale.edu/~ho2/">Hee Oh</a></h4>
+                        <p>Yale</p>
                         <p><small><em>Dynamical systems</em></small></p>
                         <p>
                         </p>
@@ -149,7 +154,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Hiraku Nakajima <small>RIMS Kyoto Japan</small></h4>
+                        <h4 class="media-heading"><a href="http://www.kurims.kyoto-u.ac.jp/~nakajima/nakajima.html">Hiraku Nakajima</a></h4>
+                        <p>RIMS Kyoto Japan</p>
                         <p><small><em>Repr theory/math phys</em></small></p>
                         <p>
                         </p>
@@ -164,7 +170,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Ian Agol <small>Berkeley</small></h4>
+                        <h4 class="media-heading"><a href="https://math.berkeley.edu/~ianagol/">Ian Agol</a></h4>
+                        <p>Berkeley</p>
                         <p><small><em>Topology</em></small></p>
                         <p>
                         </p>
@@ -182,7 +189,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Kerry Landman <small>University of Melbourne, Australia</small></h4>
+                        <h4 class="media-heading"><a href="http://www.ms.unimelb.edu.au/~kerryl@unimelb/index.php?page_ref_id=86">Kerry Landman</a></h4>
+                        <p>University of Melbourne, Australia</p>
                         <p><small><em>Models for appl. biology & tissue eng</em></small></p>
                         <p>
                         </p>
@@ -197,7 +205,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Lexing Ying <small>Stanford</small></h4>
+                        <h4 class="media-heading"><a href="http://web.stanford.edu/~lexing/">Lexing Ying</a></h4>
+                        <p>Stanford</p>
                         <p><small><em>Scientific computing</em></small></p>
                         <p>
                         </p>
@@ -215,7 +224,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Manuel del Pino <small>U. de Chile</small></h4>
+                        <h4 class="media-heading"><a href="http://www.uchile.cl/portal/presentacion/historia/grandes-figuras/premios-nacionales/ciencias-/94667/manuel-del-pino-manresa">Manuel del Pino</a></h4>
+                        <p>Universidad de Chile</p>
                         <p><small><em>PDE</em></small></p>
                         <p>
                         </p>
@@ -230,7 +240,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Maryam Mirzajani <small>Stanford</small></h4>
+                        <h4 class="media-heading"><a href="">Maryam Mirzajani</a></h4>
+                        <p>Stanford</p>
                         <p><small><em>Teichmuller theory, hyperbolic geometry</em></small></p>
                         <p>
                         </p>
