--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -56,7 +56,7 @@
                 <li><a href="{{ app.request.basepath }}/program">Program</a></li>
                 <li><a href="#">Registration</a></li>
                 <li><a href="{{ app.request.basepath }}/plenary-speakers">Plenary Speakers</a></li>
-                <li><a href="{{ app.request.basepath }}/financial-assistance">Finantial Assistance</a></li>
+                <li><a href="{{ app.request.basepath }}/financial-assistance">Financial Assistance</a></li>
                 <li><a href="{{ app.request.basepath }}/sponsors">Sponsors</a></li>
                 <li><a href="{{ app.request.basepath }}/oaxaca">Oaxaca</a></li>
                 <li><a href="{{ app.request.basepath }}/contact">Contact</a></li>
