--- a/web/css/style.css
+++ b/web/css/style.css
@@ -429,5 +429,17 @@ html, body {
   .cd-main-content p {
     font-size: 20px;
     font-size: 1.25rem;
+
+
   }
+}
+.pacific {
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
+  text-align: center;
+  align-content: center;
+  color: #ffffff;
+  padding-top: 5px;
+  padding-bottom: 10px;
+
 }
