--- a/views/landing.html.twig
+++ b/views/landing.html.twig
@@ -21,6 +21,7 @@
 </head>
 <body class="cd-intro">
     <br>
+
     <div class="row text-center hidden-sm hidden-xs">
         <div class="col-md-11 col-md-offset-1 footer col-centered">
             <img src="img/unam-logo.png" class="img-responsive logo">
@@ -57,13 +58,17 @@
         </ul>
     </nav>
 
+
     <div class="intro-header">
+        <div class="pacific">Pacific Rim Mathematical Association </div>
+
         <img src="img/logoprima-home.png" class="img-responsive center-block" >
     </div>
 
     <div class="intro-btn">
         <a href="home" class="btn btn-primary-outline" role="button">Enter</a>
     </div>
+
 
     <script src="js/jquery-2.1.1.js"></script>
     <script src="js/main.js"></script> <!-- Resource jQuery -->
