--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -101,7 +101,8 @@
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading">Fernando Coda Marques <small>Princeton</small></h4>
+                        <h4 class="media-heading"><a href="https://www.math.princeton.edu/directory/fernando-cod%C3%A1-marques">Fernando Coda Marques</a></h4>
+                        <p>Princeton</p>
                         <p><small><em>Geometric analysis</em></small></p>
                         <p>
                         </p>
