--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -46,8 +46,8 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand hidden-xs hidden-sm" href="home"><img src="{{ app.request.basepath }}/img/primalogo.png" height="100%"> </a>
-            <a class="navbar-brand hidden-md hidden-lg" href="home">PRIMA 2017</a>
+            <a class="navbar-brand hidden-xs hidden-sm" href="{{ app.request.basepath }}/home"><img src="{{ app.request.basepath }}/img/primalogo.png" height="100%"> </a>
+            <a class="navbar-brand hidden-md hidden-lg" href="{{ app.request.basepath }}/home">PRIMA 2017</a>
 
         </div>
 
