--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -7,11 +7,7 @@
     </div>
 
     <div class="container prima-content">
-        <p class="text-justify">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca,
-            Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences
-            institutes, departments and societies from around the Pacific Rim, established in 2005 with the
-            aim of promoting and facilitating the development of the mathematical sciences throughout the
-            Pacific Rim region.
+        <p class="text-justify"> Welcome to the Third Pacific Rim Mathematical Association.
         </p>
 
         <div class="col-lg-offset-4">
@@ -162,9 +158,11 @@
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>15:00-17:00</strong></div>
+                                <div class="panel-heading"><strong>15:00-19:30</strong></div>
                                 <div class="panel-body">
-                                    <h3>Special Sessions Group 1</h3><br>
+                                    <h3>Special Sessions Group 1</h3>
+                                    <p>Coffee Break From 17:00 to 17:30</p>
+                                    <br>
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-3">
                                             <div class="well">
