--- a/views/financial.html.twig
+++ b/views/financial.html.twig
@@ -4,10 +4,7 @@
 
     <div class="prima-title"><strong>FINANCIAL ASSISTANCE</strong></div>
     <div class="container prima-content">
-        <p>The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca,
-            Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes,
-            departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and
-            facilitating the development of the mathematical sciences throughout the Pacific Rim region.
+        <p align="center">Coming Soon.
         </p>
     </div>
 
