--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -78,7 +78,9 @@
                     <strong>Dr. Daniel Juan</strong> <em>daniel<i class="fa fa-at" aria-hidden="true"></i>matmor.unam.mx</em>, and <strong>Dr. Jose Seade</strong> <em>jseade<i class="fa fa-at" aria-hidden="true"></i>im.unam.mx</em>.<br><br>
                     Deadline for submissions: January 31st 2017.</p>
                 </div>
-                <div class="modal-footer">
+
+
+                        <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -87,10 +89,17 @@
 
     <div class="container">
         <div class="page-header text-center"><h2>Welcome Message</h2></div>
-        <div class="row">
+        <divmodal-body class="row">
             <div class="col-md-8 col-md-offset-2">
                 <p class="lead text-center text-muted">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
             </div>
+
+        </div class= "modal-body">
+        <div align="center"><img src="img/postercito.png" style="height: 40px"></img
+
+            <p> Download  </p>
+            <button type="button" class="btn btn-default"><a href="img/cartel.jpg">The poster here</a></button> <br>
+
         </div>
         <div class="page-header text-center"><h2>Organizing Committee<h2> </div>
         <div class="row text-center plenary">
