--- a/web/css/ccm.css
+++ b/web/css/ccm.css
@@ -448,5 +448,12 @@ h4{
     .collapsing {
         overflow: hidden!important;
     }
+
+    .btn {
+        background-color: #ec008c;
+        color: #fff;
+        font-size: 14px;
+
+    }
 }
 
