--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -215,17 +215,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>17:00-17:30</strong></div>
-                                <div class="panel-body">
-                                    <h4>Coffee Break</h4>
-                                </div>
-                            </div>
-                            <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>17:30-19:30</strong></div>
-                                <div class="panel-body">
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
@@ -248,6 +237,8 @@
                                     </div>
                                 </div>
                             </div>
+
+
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>19:30-20:00</strong></div>
                                 <div class="panel-body">
@@ -288,51 +279,80 @@
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>15:00-17:00</strong></div>
+                                <div class="panel-heading"><strong>15:00-19:30</strong></div>
                                 <div class="panel-body">
-                                    <h3>Special Sessions Group 1</h3><br>
+                                    <h3>Special Sessions Group 1</h3>
+                                    <p>Coffee Break From 17:00 to 17:30</p>
+                                    <br>
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-3">
                                             <div class="well">
-                                                <h4>Algebraic Geometry</h4>
+                                                <h4><a href="{{ app.request.basepath }}/sessions/matroid-theory">Matroid Theory</a></h4>
                                                 Room 1
                                             </div>
                                         </div>
                                         <div class="col-md-3">
                                             <div class="well">
-                                                <h4>Special Functions, Orthogonal Polynomials and Applications</h4>
+                                                <h4>Bergman Spaces and Toeplitz operators</h4>
                                                 Room 2
                                             </div>
                                         </div>
                                         <div class="col-md-3">
                                             <div class="well">
-                                                <h4>Geometry and Topology</h4>
+                                                <h4>Dynamical Systems and Geometry</h4>
                                                 Room 3
                                             </div>
                                         </div>
                                         <div class="col-md-3">
                                             <div class="well">
-                                                <h4>Commutative Algebra Homological and Combinatorial Methods</h4>
+                                                <h4>Algebraic and Enumerative Combinatorics</h4>
                                                 Room 4
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>17:00-17:30</strong></div>
-                                <div class="panel-body">
-                                    <h4>Coffee Break</h4>
-                                </div>
-                            </div>
-                            <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>17:30-19:30</strong></div>
-                                <div class="panel-body">
-                                    <div class="row">
-                                        <div class="col-md-12">
+                                    <div class="row row-flex row-flex-wrap">
+                                        <div class="col-md-3">
                                             <div class="well">
-                                                <h4>Commutative Algebra Homological and Combinatorial Methods</h4>
+                                                <h4>Mathematical Ecology and Epidemiology</h4>
+                                                Room 5
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="well">
+                                                <h4>Advances in Geometric Methods in Mechanics with Applications</h4>
+                                                Room 6
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="well">
+                                                <h4>Nonlinear Elliptic PDE and Systems</h4>
+                                                Room 3
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <div class="well">
+                                                <h4>Algebraic Geometry</h4>
                                                 Room 4
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row row-flex row-flex-wrap">
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Special Functions, Orthogonal Polynomials and Applications</h4>
+                                                Room 9
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Geometry and Topology</h4>
+                                                Room 10
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Commutative Algebra Homological and  Combinatorial Methods</h4>
+                                                Room 11
                                             </div>
                                         </div>
                                     </div>
@@ -418,9 +438,10 @@
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>15:00-17:00</strong></div>
+                                <div class="panel-heading"><strong>15:00-19:30</strong></div>
                                 <div class="panel-body">
-                                    <h3>Special Sessions Group 2</h3><br>
+                                    <h3>Special Sessions Group 2</h3>
+                                    <p>Coffee Break from 17:00 to 17:30 </p><br>
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
@@ -440,19 +461,7 @@
                                                 Room 3
                                             </div>
                                         </div>
-
                                     </div>
-                                </div>
-                            </div>
-                            <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>17:00-17:30</strong></div>
-                                <div class="panel-body">
-                                    <h4>Coffee Break</h4>
-                                </div>
-                            </div>
-                            <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>17:30-19:30</strong></div>
-                                <div class="panel-body">
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
@@ -473,8 +482,44 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="row row-flex row-flex-wrap">
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Groups and orbifolds in geometry and topology</h4>
+                                                Room 1
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Singularities of Spaces and Mappings</h4>
+                                                Room 2
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Poisson Geometry and Its Applications</h4>
+                                                Room 3
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="well">
+                                                <h4>Inverse problems and PDE Control Theory</h4>
+                                                Room 4
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="well">
+                                                <h4>Stochastic Processes and Applications</h4>
+                                                Room 5
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+
+
                         </div>
                         <div role="tabpanel" class="tab-pane" id="friday">
                             {# Friday content #}
@@ -503,9 +548,50 @@
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>15:00-17:00</strong></div>
+                                <div class="panel-heading"><strong>15:00-19:30</strong></div>
                                 <div class="panel-body">
-                                    <h3>Special Sessions Group 2</h3><br>
+                                    <h3>Special Sessions Group 2</h3>
+                                    <p>Coffee Break from 17:00 to 17:30 </p><br>
+                                    <div class="row row-flex row-flex-wrap">
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Differential Geometry</h4>
+                                                Room 1
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Current Trends in Symplectic Geometry and Topology</h4>
+                                                Room 2
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Symmetric Structures in Discrete Geometry</h4>
+                                                Room 3
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row row-flex row-flex-wrap">
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Discrete Math</h4>
+                                                Room 4
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Matrix Analysis and its Applications</h4>
+                                                Room 5
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="well">
+                                                <h4>Instability of natural convection in cylindrical containers</h4>
+                                                Room 5
+                                            </div>
+                                        </div>
+                                    </div>
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
@@ -525,29 +611,26 @@
                                                 Room 3
                                             </div>
                                         </div>
-
                                     </div>
-                                </div>
-                            </div>
-                            <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>17:00-17:30</strong></div>
-                                <div class="panel-body">
-                                    <h4>Coffee Break</h4>
-                                </div>
-                            </div>
-                            <div class="panel panel-timeline text-center">
-                                <div class="panel-heading"><strong>17:30-19:30</strong></div>
-                                <div class="panel-body">
                                     <div class="row">
-                                        <div class="col-md-12">
+                                        <div class="col-md-6">
                                             <div class="well">
-                                                <h4>Inverse problems and PDE Control Theory Stochastic Processes and Applications</h4>
+                                                <h4>Inverse problems and PDE Control Theory</h4>
                                                 Room 4
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="well">
+                                                <h4>Stochastic Processes and Applications</h4>
+                                                Room 5
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
+
+
                         </div>
                     </div>
                 </div>
