--- a/views/contact.html.twig
+++ b/views/contact.html.twig
@@ -4,7 +4,7 @@
 
     <div class="prima-title"><strong>CONTACT</strong></div>
     <div class="container prima-content">
-        <p align="center"">prima2017@matmor.unam.mx
+        <p align="center"">prima2017<i class="fa fa-at" aria-hidden="true"></i>matmor.unam.mx
         </p>
     </div>
 
