--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -2,25 +2,6 @@
 
 {% block content %}
 
- {#       <div class="prima-header">
-            <div class="prima-header-content">
-                <h3>PRIMA 2017</h3>
-                <p>The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
-
-            </div>
-        </div>
-    <section class="cta-section text-center">
-    </section>
-
-    <div class="prima-banner">
-        <div class="row">
-            <div class="col-md-4 col-md-offset-6">
-                <h3>PRIMA 2017</h3>
-                <p>The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
-            </div>
-        </div>
-    </div>
-#}
     <!-- Carousel
     ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -78,9 +59,7 @@
                     <strong>Dr. Daniel Juan</strong> <em>daniel<i class="fa fa-at" aria-hidden="true"></i>matmor.unam.mx</em>, and <strong>Dr. Jose Seade</strong> <em>jseade<i class="fa fa-at" aria-hidden="true"></i>im.unam.mx</em>.<br><br>
                     Deadline for submissions: January 31st 2017.</p>
                 </div>
-
-
-                        <div class="modal-footer">
+                <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
@@ -88,19 +67,24 @@
     </div>
 
     <div class="container">
-        <div class="page-header text-center"><h2>Welcome Message</h2></div>
-        <divmodal-body class="row">
-            <div class="col-md-8 col-md-offset-2">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="page-header text-center"><h2>Welcome Message</h2></div>
                 <p class="lead text-center text-muted">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
             </div>
-
-        </div class= "modal-body">
-        <div align="center"><img src="img/postercito.png" style="height: 40px"></img
+            <div class="col-md-4 text-center">
+                <div class="page-header"></div>
+                <a href="img/cartel.jpg"><img src="img/postercito.jpg"></img></a>
+            </div>
+        </div>
+{#
+        <div align="center"><img src="img/postercito.png" style="height: 40px"></img>
 
             <p> Download  </p>
             <button type="button" class="btn btn-default"><a href="img/cartel.jpg">The poster here</a></button> <br>
 
         </div>
+#}
         <div class="page-header text-center"><h2>Organizing Committee<h2> </div>
         <div class="row text-center plenary">
             <div class="col-md-3"><img src="img/FirstPage_rolando.png" alt="..." class="img-thumbnail text-center"><br>
